Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/generics/inference/4972073/T4972073a.out
T4972073a.java:18:80: compiler.err.repeated.interface
1 error
